/*
 * $Id: ChangeLog,v 1.2692 2004/03/31 03:18:31 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-31 05:47 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    ! fixed settinf position by DBOI_POSITION for workareas with 
      active filter

2004-03-31 05:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/workarea.c
    + added scopped relations

2004-03-31 04:25 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/config/dos/watcom.cf
    * warning level set to -w2

  * xharbour/include/hbapi.h
    * new macro HB_ITEM_NIL for initializing static HB_ITEM vars

  * xharbour/contrib/rdd_ads/ads1.c
  * xharbour/contrib/rdd_ads/adsfunc.c
  * xharbour/include/simplex.c
  * xharbour/source/rtl/inkey.c
  * xharbour/source/rtl/gtcrs/gtcrs.c
    * warning fixed

2004-03-31 00:55 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/fparse.c
  * xharbour/source/rtl/hbcomprs.c
  * xharbour/source/rtl/hbffind.c
  * xharbour/source/rtl/hbrandom.c
  * xharbour/source/rtl/philes.c
  * xharbour/source/vm/hash.c
  * xharbour/source/vm/inet.c
  * xharbour/source/vm/thread.c
    * warning fixed

  * xharbour/source/rtl/filesys.c
    * fixed warnings
    * some small fixes for errno settings and cleanups

2004-03-30 02:45 UTC-0500 Sylvain Robert (s.robert/at/videotron.ca)
* contrib\hbzlib\zipcomp.cpp
    hb_CompressFile()
    ! Convert Filename to lower case for HB_OS_WIN_32 only, this is done
      only when verifying the File to add to the archive with the archive
      file name to prevent infinite loop. Under windows Test.zip and test.zip
      are the same. The file in the archive respect the case

2004-03-30 11:03 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrays.c